[project]
name = "odoo-addons-oca-hr-attendance"
version = "17.0.20240824.0"
dependencies = [
    "odoo-addon-hr_attendance_autoclose>=17.0dev,<17.1dev",
    "odoo-addon-hr_attendance_calendar_view>=17.0dev,<17.1dev",
    "odoo-addon-hr_attendance_reason>=17.0dev,<17.1dev",
    "odoo-addon-hr_attendance_report_theoretical_time>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
